--- a/hypr/.config/hypr/hyprland/startup.conf
+++ b/hypr/.config/hypr/hyprland/startup.conf
@@ -3,8 +3,7 @@ exec-once = wl-paste --type image --watch cliphist store # Stores only image dat
 
 exec-once = systemctl --user start hyprpolkitagent
 exec-once = nm-applet
-exec-once = qs -c noctalia-shell
 
 exec-once = [workspace 1 silent] alacritty
-exec-once = [workspace 2 silent] zen-browser
+exec-once = [workspace 2 silent] librewolf
 
