feat: use tokyonight.nvim config for tmux

--- a/hypr/.config/hypr/hyprland/startup.conf
+++ b/hypr/.config/hypr/hyprland/startup.conf
@@ -4,6 +4,11 @@ exec-once = wl-paste --type image --watch cliphist store # Stores only image dat
 exec-once = systemctl --user start hyprpolkitagent
 exec-once = nm-applet
 
+exec-once = hyprsunset --temperature 4500
+
+exec-once = swww-daemon
+exec-once = ~/scripts/swww_random_bg_image.sh
+
 exec-once = [workspace 1 silent] alacritty
-exec-once = [workspace 2 silent] librewolf
+exec-once = [workspace 2 silent] firefox
 
