--- a/hypr/.config/hypr/hyprland/decorations.conf
+++ b/hypr/.config/hypr/hyprland/decorations.conf
@@ -18,7 +18,7 @@ decoration {
     rounding_power = 2
 
     active_opacity = 1
-    inactive_opacity = .95
+    inactive_opacity = .9
 
     shadow {
         enabled = false
@@ -28,7 +28,7 @@ decoration {
     }
 
     blur {
-        enabled = true
+        enabled = false
         size = 3
         passes = 1
         vibrancy = 0.1696
