--- a/hypr/.config/hypr/hyprland/env.conf
+++ b/hypr/.config/hypr/hyprland/env.conf
@@ -3,8 +3,8 @@
 monitor = eDP-1,1920x1080@60,0x0,1
 monitor = HDMI-A-1,1920x1080@60,1920x0,1
 
-#monitor=HDMI-A-1, disable
-monitor=eDP-1, disable
+# monitor=eDP-1, disable
+# monitor=HDMI-A-1, disable
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
