--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -5,8 +5,8 @@ set-option -g default-terminal "screen-256color"
 set -s escape-time 10
 
 set -g status-position top
-set -g status-style "bg=default fg=cyan"
-set -g status-justify absolute-centre
+set -g status-style "bg=default"
+# set -g status-justify absolute-centre
 set -g status-right ""
 
 set -g base-index 1
