swap alt and windows key, swap capslock and escape

--- a/hypr/.config/hypr/hyprland/startup.conf
+++ b/hypr/.config/hypr/hyprland/startup.conf
@@ -10,5 +10,5 @@ exec-once = swww-daemon
 exec-once = ~/scripts/swww_random_bg_image.sh
 
 exec-once = [workspace 1 silent] alacritty
-exec-once = [workspace 2 silent] firefox
+exec-once = [workspace 2 silent] chromium
 
