--- a/hypr/.config/hypr/hyprland/env.conf
+++ b/hypr/.config/hypr/hyprland/env.conf
@@ -4,7 +4,7 @@ monitor = eDP-1,1920x1080@60,0x0,1
 monitor = HDMI-A-1,1920x1080@60,1920x0,1
 
 # monitor=eDP-1, disable
-# monitor=HDMI-A-1, disable
+monitor=HDMI-A-1, disable
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
@@ -27,8 +27,8 @@ input {
     kb_layout = us
     kb_variant =
     kb_model =
-    kb_options =
     kb_rules =
+	kb_options = altwin:swap_alt_win,caps:swapescape
 
     follow_mouse = 1
 
