--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -1,10 +1,10 @@
 [general]
-import = ["./tokyonight.toml"]
+import = ["~/.config/alacritty/themes/noctalia.toml"]
 
 [window]
 padding = { x = 12, y = 12 }
-opacity = 0.95
+opacity = 0.8
 
 [font]
-size = 16
+size = 20
 normal = { family = "CaskaydiaMono Nerd Font Mono", style = "Regular" }
