--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -2,5 +2,5 @@ source=./hyprland/env.conf
 source=./hyprland/animations.conf
 source=./hyprland/decorations.conf
 source=./hyprland/startup.conf
-source=./hyprland/rules.conf
 source=./hyprland/keybinds.conf
+source=./hyprland/noctalia.conf
