--- a/hypr/.config/hypr/hyprland/env.conf
+++ b/hypr/.config/hypr/hyprland/env.conf
@@ -6,8 +6,9 @@ monitor = HDMI-A-1,1920x1080@60,1920x0,1
 # monitor=eDP-1, disable
 monitor=HDMI-A-1, disable
 
-env = XCURSOR_SIZE,24
-env = HYPRCURSOR_SIZE,24
+env = XCURSOR_SIZE, 24
+env = HYPRCURSOR_SIZE, 24
+env = QT_QPA_PLATFORMTHEME, qt6ct
 
 ecosystem {
     no_update_news = true
@@ -28,7 +29,7 @@ input {
     kb_variant =
     kb_model =
     kb_rules =
-	kb_options = altwin:swap_alt_win,caps:swapescape
+	kb_options = altwin:swap_alt_win, caps:swapescape
 
     follow_mouse = 1
 
