--- a/hypr/.config/hypr/hyprland/startup.conf
+++ b/hypr/.config/hypr/hyprland/startup.conf
@@ -1,14 +1,8 @@
 exec-once = wl-paste --type text --watch cliphist store # Stores only text data
 exec-once = wl-paste --type image --watch cliphist store # Stores only image data
 
-exec-once = systemctl --user start hyprpolkitagent
-exec-once = nm-applet
-
-exec-once = hyprsunset --temperature 4500
-
-exec-once = swww-daemon
-exec-once = ~/scripts/swww_random_bg_image.sh
+exec-once = qs -c noctalia-shell
 
 exec-once = [workspace 1 silent] alacritty
-exec-once = [workspace 2 silent] chromium
+exec-once = [workspace 2 silent] zen-browser
 
